--- a/Text Generation.ipynb
+++ b/Text Generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,8 @@
    ],
    "source": [
     "#Importing the libraries\n",
-    "import numpy\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
     "import os\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +43,7 @@
        " 'Text Generation.ipynb']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,13 +63,23 @@
        "['internet_archive_scifi_v3.txt']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "os.listdir(\"scifi-stories-text-corpus/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo chmod 777 internet_archive_scifi_v3.txt\n",
+    "!stat -c \"%a %n\" internet_archive_scifi_v3.txt"
    ]
   },
   {
@@ -144,7 +155,7 @@
     "seq_length = 100\n",
     "X_train = []\n",
     "y_train = []\n",
-    "for i in range(0, n_chars - seq_length, 1):\n",
+    "for i in tqdm(range(0, n_chars - seq_length, 1)):\n",
     "    input_sequence = text_corpus[i:i + seq_length]\n",
     "    output_sequence = text_corpus[i + seq_length]\n",
     "    X_train.append([chars_to_int[char] for char in input_sequence])\n",
