--- a/Text Generation.ipynb
+++ b/Text Generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        " 'Text Generation.ipynb']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,14 +84,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Load the raw text and convert them to lowercase\n",
     "filename = \"scifi-stories-text-corpus/internet_archive_scifi_v3.txt\"\n",
     "text_corpus = open(filename).read()\n",
+    "len_text = len(text_corpus)\n",
+    "text_corpus = text_corpus[0:len_text//10]\n",
     "text_corpus = text_corpus.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14932636"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(text_corpus)"
    ]
   },
   {
