--- a/Text Generation.ipynb
+++ b/Text Generation.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Importing the libraries\n",
     "import numpy as np\n",
@@ -28,22 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['.git',\n",
-       " '.ipynb_checkpoints',\n",
+       "['README.md',\n",
+       " '.git',\n",
+       " 'Text Generation.ipynb',\n",
        " 'LICENSE',\n",
-       " 'README.md',\n",
-       " 'scifi-stories-text-corpus',\n",
        " 'scifi-stories-text-corpus.zip',\n",
-       " 'Text Generation.ipynb']"
+       " '.ipynb_checkpoints',\n",
+       " 'internet_archive_scifi_v3.txt']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,25 +50,31 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['internet_archive_scifi_v3.txt']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  scifi-stories-text-corpus.zip\n",
+      "  inflating: internet_archive_scifi_v3.txt  \n"
+     ]
     }
    ],
    "source": [
-    "os.listdir(\"scifi-stories-text-corpus/\")"
+    "!unzip scifi-stories-text-corpus.zip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "777 internet_archive_scifi_v3.txt\r\n"
+     ]
+    }
+   ],
    "source": [
     "!sudo chmod 777 internet_archive_scifi_v3.txt\n",
     "!stat -c \"%a %n\" internet_archive_scifi_v3.txt"
@@ -84,30 +82,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Load the raw text and convert them to lowercase\n",
-    "filename = \"scifi-stories-text-corpus/internet_archive_scifi_v3.txt\"\n",
+    "filename = \"internet_archive_scifi_v3.txt\"\n",
     "text_corpus = open(filename).read()\n",
     "len_text = len(text_corpus)\n",
-    "text_corpus = text_corpus[0:len_text//10]\n",
+    "text_corpus = text_corpus[0:len_text//100]\n",
     "text_corpus = text_corpus.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14932636"
+       "1493263"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys([' ', '!', '\"', '#', \"'\", '(', ')', ',', '-', '.', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', ':', ';', '?', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z'])\n"
+      "dict_keys(['t', 'q', ' ', '?', 's', ';', 'p', 'j', 'i', 'w', 'l', 'f', \"'\", '(', ')', 'm', 'z', 'n', '\"', ':', 'b', 'u', 'a', '#', 'y', 'e', 'k', '-', 'r', 'd', 'h', ',', '.', '!', 'v', 'c', 'x', 'g', 'o'])\n"
      ]
     }
    ],
@@ -147,15 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Characters:  149326361\n",
-      "Total Vocab:  49\n"
+      "Total Characters:  1493263\n",
+      "Total Vocab:  39\n"
      ]
     }
    ],
@@ -169,50 +167,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1493163/1493163 [00:19<00:00, 75437.67it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Patterns:  1493163\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#Prepare the dataset of input to output pairs encoded as integers\n",
     "seq_length = 100\n",
-    "X_train = []\n",
-    "y_train = []\n",
+    "X_data = []\n",
+    "y_data = []\n",
     "for i in tqdm(range(0, n_chars - seq_length, 1)):\n",
     "    input_sequence = text_corpus[i:i + seq_length]\n",
     "    output_sequence = text_corpus[i + seq_length]\n",
-    "    X_train.append([chars_to_int[char] for char in input_sequence])\n",
-    "    y_train.append(chars_to_int[output_sequence])\n",
-    "n_patterns = len(X_train)\n",
+    "    X_data.append([chars_to_int[char] for char in input_sequence])\n",
+    "    y_data.append(chars_to_int[output_sequence])\n",
+    "n_patterns = len(X_data)\n",
     "print (\"Total Patterns: \", n_patterns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reshape X to be [samples, time steps, features]\n",
+    "X = np.reshape(X_data, (n_patterns, seq_length, 1))\n",
+    "# normalize\n",
+    "X = X / float(n_vocab)\n",
+    "# one hot encode the output variable\n",
+    "y = np_utils.to_categorical(y_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the LSTM model\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(256, input_shape=(X.shape[1], X.shape[2])))\n",
+    "model.add(Dropout(0.2))\n",
+    "model.add(Dense(y.shape[1], activation='softmax'))\n",
+    "model.compile(loss='categorical_crossentropy', optimizer='adam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the checkpoint\n",
+    "filepath=\"weights-improvement-{epoch:02d}-{loss:.4f}.hdf5\"\n",
+    "checkpoint = ModelCheckpoint(filepath, monitor='loss', verbose=1, save_best_only=True, mode='min')\n",
+    "callbacks_list = [checkpoint]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0813 06:55:42.419023 140672944252672 deprecation.py:323] From /usr/local/lib/python3.5/dist-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "  44928/1493163 [..............................] - ETA: 37:45 - loss: 3.0060"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(X, y, epochs=20, batch_size=128, callbacks=callbacks_list)"
+   ]
   },
   {
    "cell_type": "code",
@@ -266,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
